fix: make standard require and import root directory
* set the import root directory to package.json path
* set the require root directory to file path or if transfom from string
  to package.json path

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "jest": "^26.2.2"
+  },
+  "dependencies": {
+    "require-from-string": "^2.0.2"
   }
 }
