--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "babel-plugin-as-macro",
-  "version": "0.1.0",
+  "version": "0.7.1",
   "description": "add macro power to javascript code",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "node src/tests/manual_test.js",
+    "start": "node test/manual_test.js",
     "test": "jest"
   },
   "keywords": [
     "babel",
     "plugin",
+    "as macro",
     "macro"
   ],
-  "author": "shabaany",
+  "author": {
+    "name":"Mohammad Reza Shabani",
+    "email": "shabaany@yahoo.com"
+  },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.1",
