--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "babel-plugin-as-macro",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "add macro power to javascript code",
 	"main": "./src/index.js",
 	"scripts": {
@@ -31,6 +31,7 @@
 		"jest": "^26.2.2"
 	},
 	"dependencies": {
+		"esm": "^3.2.25",
 		"require-from-string": "^2.0.2"
 	}
 }
